--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/react-router-dom": "^5.3.2",
     "colors": "^1.4.0",
     "concurrently": "^6.3.0",
     "dotenv": "^10.0.0",
